src/objects/Be_Dynamic_Report_Chart__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Active_cache__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active cache</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Filters__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Filters</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hide_on_error__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide on error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rendered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Rendered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Report_DeveloperName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Report Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Show_refresh_button__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show refresh button</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Specify a chart’s size with one of these values:
    - tiny
    - small
    - medium
    - large
    huge</inlineHelpText>
        <label>Size</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_cache_data__c</fullName>
        <label>Time cache data (milliseconds)</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>unique_id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Dynamic Report Chart</label>
</CustomObject>